--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mycorp</groupId>
-	<artifactId>spring-angular-starter-parent</artifactId>
+	<artifactId>arithmetic-calculator-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<parent>
@@ -14,8 +14,8 @@
 		<relativePath />
 	</parent>
 	<modules>
-		<module>backend</module>
-		<module>frontend</module>
+		<module>calculator-backend</module>
+		<module>calculator-frontend</module>
 	</modules>
 
 	<dependencies>
