--- a/calculator-frontend/pom.xml
+++ b/calculator-frontend/pom.xml
@@ -6,11 +6,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.mycorp</groupId>
-		<artifactId>spring-angular-starter-parent</artifactId>
+		<artifactId>arithmetic-calculator-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>frontend</artifactId>
-	<name>frontend</name>
+	<artifactId>calculator-frontend</artifactId>
+	<name>calculator-frontend</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
