--- a/calculator-backend/src/main/resources/application.properties
+++ b/calculator-backend/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+#    5am every day
+purge.cron.expression=0 0 5 * * ?
+
 # ===============================
 # DB
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost/database?currentSchema=schema
+spring.datasource.url=jdbc:postgresql://localhost/CalcDB?currentSchema=calculator
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 # ===============================
@@ -22,7 +25,17 @@ spring.jpa.hibernate.ddl-auto=create
 
 server.port=8080
 
-
+####### H2
+#################### DataSource Configuration ##########################
+#jdbc.driverClassName=org.h2.Driver
+#jdbc.url=jdbc:h2:mem:registration_02;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#jdbc.user=sa
+#jdbc.pass=
+#init-db=false
+#################### Hibernate Configuration ##########################
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+#hibernate.show_sql=false
+#hibernate.hbm2ddl.auto=create-drop
 
 
  
