--- a/calculator-backend/src/main/resources/application.properties
+++ b/calculator-backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=postgres
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-# spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -24,6 +24,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 
 server.port=8080
+spring.main.allow-bean-definition-overriding=true
 
 ####### H2
 #################### DataSource Configuration ##########################
@@ -37,7 +38,24 @@ server.port=8080
 #hibernate.show_sql=false
 #hibernate.hbm2ddl.auto=create-drop
 
+# Uncomment the keys to enable captcha
+google.recaptcha.key.site=6LfaHiITAAAAAAgZBHl4ZUZAYk5RlOYTr6m2N34X
+google.recaptcha.key.secret=6LfaHiITAAAAANpDTA_Zflwib95IhDqg2SNRLt4U
 
+################### JavaMail Configuration ##########################
+support.email=USERNAME@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.username=USERNAME@gmail.com
+spring.mail.password=PASSWORD
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.starttls.enable=true
+spring.mail.properties.mail.smtps.timeout=8000
+
+# uncomment this property to see the SQL statements generated
+#logging.level.org.hibernate.SQL=DEBUG
  
 
 
