--- a/calculator-backend/src/main/resources/application.properties
+++ b/calculator-backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #    5am every day
 purge.cron.expression=0 0 5 * * ?
-
+management.health.defaults.enabled = false
+server.port=8080
+spring.main.allow-bean-definition-overriding=true
 # ===============================
 # DB
 # ===============================
@@ -22,9 +24,6 @@ spring.jpa.hibernate.ddl-auto=create
 # log SQL queries to see if action is happening
 # logging.level.org.hibernate.SQL=debug
 
-
-server.port=8080
-spring.main.allow-bean-definition-overriding=true
 
 ####### H2
 #################### DataSource Configuration ##########################
