--- a/calculator-backend/pom.xml
+++ b/calculator-backend/pom.xml
@@ -199,6 +199,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.hamcrest</groupId>
+    		<artifactId>hamcrest-all</artifactId>
+    		<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<scope>test</scope>
