--- a/calculator-backend/src/main/resources/application.properties
+++ b/calculator-backend/src/main/resources/application.properties
@@ -6,13 +6,14 @@ spring.main.allow-bean-definition-overriding=true
 # ===============================
 # DB
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost/CalcDB?currentSchema=calculator
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=UserDb
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=passw0rd
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-spring.datasource.driverClassName=org.postgresql.Driver
+
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -23,7 +24,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=create
 # log SQL queries to see if action is happening
 # logging.level.org.hibernate.SQL=debug
-
+logging.level.org.hibernate.type=TRACE
 
 ####### H2
 #################### DataSource Configuration ##########################
