registration operations test

--- a/calculator-backend/src/main/resources/application.properties
+++ b/calculator-backend/src/main/resources/application.properties
@@ -6,10 +6,20 @@ spring.main.allow-bean-definition-overriding=true
 # ===============================
 # DB
 # ===============================
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=UserDb
-spring.datasource.username=postgres
-spring.datasource.password=passw0rd
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=UserDb
+#spring.datasource.username=postgres
+#spring.datasource.password=passw0rd
+
+####### H2
+#################### DataSource Configuration ##########################
+#jdbc.driverClassName=org.h2.Driver
+#jdbc.url=jdbc:h2:mem:registration_02;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#jdbc.user=sa
+#jdbc.pass=
+#init-db=false
+
+
 # ===============================
 # JPA / HIBERNATE
 # ===============================
@@ -26,13 +36,7 @@ spring.jpa.hibernate.ddl-auto=create
 # logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type=TRACE
 
-####### H2
-#################### DataSource Configuration ##########################
-#jdbc.driverClassName=org.h2.Driver
-#jdbc.url=jdbc:h2:mem:registration_02;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#jdbc.user=sa
-#jdbc.pass=
-#init-db=false
+
 #################### Hibernate Configuration ##########################
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
 #hibernate.show_sql=false
